# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
pre_commit_hooks/: check_no_special_commits.py
